--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
       </div>
 
       <div class="container">
-        <div class="recipes row"><div class="recipe col-12 col-md-6 col-lg-4">
+        <div class="recipes row">
+          <div class="recipe col-12 col-md-6 col-lg-4">
             <div class="card rounded border-0">
               <div class="card-header bg-secondary"></div>
               <div class="card-body bg-light">
