ajout de commentaire explicative

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         placeholder="Rechercher un ingrédient"><i id="chevron-up-ingredient"
                         class="dropDownMenus--input_active_chevron fas fa-chevron-up"></i></span>
                     <ul class="dropDownMenus--input_active_list dropDownMenus--input_active_list_ing">
-                        <!-- Incrémentation <li> en JS -->
+                        <!-- Incrémentation <li> ingrédients en JS -->
                     </ul>
 
                 </div>
@@ -64,7 +64,7 @@
                         placeholder="Rechercher un appareil"><i id="chevron-up-appliance"
                         class="dropDownMenus--input_active_chevron fas fa-chevron-up"></i></span>
                     <ul class="dropDownMenus--input_active_list dropDownMenus--input_active_list_appliance">
-                        <!-- Incrémentation <li> en JS -->
+                        <!-- Incrémentation <li> appareils en JS -->
                     </ul>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                         placeholder="Rechercher un ustensile"><i id="chevron-up-ustensils"
                         class="dropDownMenus--input_active_chevron fas fa-chevron-up"></i></span>
                     <ul class="dropDownMenus--input_active_list dropDownMenus--input_active_list_ustensils">
-                        <!-- Incrémentation <li> en JS -->
+                        <!-- Incrémentation <li> ustensils en JS -->
                     </ul>
                 </div>
             </div>
@@ -91,7 +91,7 @@
 
         <main id="recipes-container">
 
-
+           <!-- Incrémentation des recettes en JS -->
 
         </main>
     </nav>
