--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-    <script src="./JS/main.js" type="module"></script>
+    <script src="./main.js" type="module"></script>
     <title>Les petits plats</title>
 </head>
 
@@ -45,9 +45,9 @@
                         placeholder="Rechercher un ingrédient"><i id="chevron-up-ingredient"
                         class="dropDownMenus--input_active_chevron fas fa-chevron-up"></i></span>
                     <ul class="dropDownMenus--input_active_list dropDownMenus--input_active_list_ing">
-                        <!-- Incrémentation <li> ingrédients en JS -->
-                    </ul>
 
+                        <!-- Incrémentation <li> en JS -->
+                    </ul>
                 </div>
             </div>
 
@@ -64,8 +64,11 @@
                         placeholder="Rechercher un appareil"><i id="chevron-up-appliance"
                         class="dropDownMenus--input_active_chevron fas fa-chevron-up"></i></span>
                     <ul class="dropDownMenus--input_active_list dropDownMenus--input_active_list_appliance">
-                        <!-- Incrémentation <li> appareils en JS -->
+
+                        <!-- Incrémentation <li> en JS -->
                     </ul>
+                    <span id="error-message2" class="hidden">Il n'y a plus aucun ingrédient selectionnable</span>
+
                 </div>
             </div>
 
@@ -83,7 +86,7 @@
                         placeholder="Rechercher un ustensile"><i id="chevron-up-ustensils"
                         class="dropDownMenus--input_active_chevron fas fa-chevron-up"></i></span>
                     <ul class="dropDownMenus--input_active_list dropDownMenus--input_active_list_ustensils">
-                        <!-- Incrémentation <li> ustensils en JS -->
+                        <!-- Incrémentation <li> en JS -->
                     </ul>
                 </div>
             </div>
@@ -91,7 +94,7 @@
 
         <main id="recipes-container">
 
-           <!-- Incrémentation des recettes en JS -->
+
 
         </main>
     </nav>
